# prysmbot

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  block.go  channels.go  commands.go  current.go  deleted.go  food.go  goerli.go  help.go  main.go  random.go  state.go  types.go  validator.go
